class.forname.newInstance新方法