@@ -42,12 +42,8 @@ public class Tank {
 
         if(group == Group.GOOD) {
             try {
-                fs = (FireStrategy) Class.forName((String)PropertyMgr.get("goodFs")).newInstance();
-            } catch (InstantiationException e) {
-                e.printStackTrace();
-            } catch (IllegalAccessException e) {
-                e.printStackTrace();
-            } catch (ClassNotFoundException e) {
+                fs = (FireStrategy) Class.forName((String)PropertyMgr.get("goodFs")).getDeclaredConstructor().newInstance();
+            } catch (Exception e) {
                 e.printStackTrace();
             }
 
